# Gait-recognition-using-3D-point-clouds

./: README.md  Random_results.txt  SVM_results.txt
1.passthrough_z_filter/: passthrough_filter.cpp
10.features/: bash.sh
10.features/cvfh/: CMakeLists.txt~  cvfh.cpp
10.features/esf/: esf.cpp
10.features/fpfh/: CMakeLists.txt~  fpfh.cpp
10.features/vfh/: CMakeLists.txt  CMakeLists.txt~  vfh.cpp
2.passthrough_y_2_filter/: passthrough_filter.cpp
2/svm/: 1.convert_pcd_to_csv.sh  write_hog_to_csv.py  write_hog_to_csv.py~
2/svm/CSV/: .~lock.1.csv#
2/svm/PCD/: 1.pcd  10.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd  18.pcd  19.pcd  2.pcd  20.pcd  21.pcd  22.pcd  23.pcd  24.pcd  25.pcd  26.pcd  27.pcd  28.pcd  29.pcd  3.pcd  30.pcd  31.pcd  32.pcd  33.pcd  34.pcd  35.pcd  36.pcd  37.pcd  38.pcd  39.pcd  4.pcd  40.pcd  41.pcd  42.pcd  43.pcd  44.pcd  45.pcd  46.pcd  (+48 more)
2/svm/SVM_in_R/: .Rhistory  1.csv  class1.csv  svm.R
3.statistical_filter/: CMakeLists.txt  CMakeLists.txt~  statistical_filter.cpp
4.radius_based_filter/: CMakeLists.txt  CMakeLists.txt~  radius.cpp
5_remove_nan/: CMakeLists.txt  bash_script_to_automate.sh~  remove_nan.cpp
6_alligning_pcd/: CMakeLists.txt  CMakeLists.txt~  allign.cpp
7.concatnate_pcds/: CMakeLists.txt  concatnate.cpp
8.downsampling/: CMakeLists.txt  downsample.cpp
ESF/: CMakeLists.txt  class.csv  esf.cpp  write_hog_to_csv.py
temp/: convert_text_to_pcd.sh  convert_txt_to_csv.py  convert_txt_to_csv.sh  final_convert_to_csv.sh  main.sh  pca.py  pca.sh  plot.r  plotpca.r  remove_newline.sh  remove_space.sh  replace_comma_with_space.sh  replace_newline_with_comma.sh  replace_space_with_comma.sh  write_hog_to_csv.py  writecsv.sh
waste/: 1_saving_rgb_and_depth_frames.py  2_pcd_conversion.py  segment_final.py
